# quorum

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
core/: __init__.py  anthropic_client.py  deepseek_client.py  dispatcher.py  export_traces.py  model_client.py  orchestrator.py  pricing.py  router.py  tracing.py  types.py
docs/: writeup.md
evals/: grade.py  run_evals.py
evals/benchmark/bugs/: labels.json
evals/benchmark/bugs/files/: b01_offbyone.py  b03_empty_index.py  b05_leak.py  b06_early_return.py  b07_assign_in_cond.js  b08_loop_bound.js  b10_is_value.py  b11_missing_await.js  b12_silent_except.py  b13_falsy_default.py  b14_sql_injection.py  c01_sum_ok.py  (+20 more)
evals/benchmark/routing/: tasks.json
evals/fixtures/: verify_fixtures.json
evals/holdout/: ratelimit.py  run_holdout.py
evals/results/: holdout.json  holdout.md  routing.json  routing.md  verification.json  verification.md  verification_raw.json
pipelines/code_review/: __init__.py  finder.py  pipeline.py  prompts.py  schema.py  verifier.py
tests/: test_code_review.py  test_dispatcher.py  test_export_traces.py  test_grade.py  test_model_client.py  test_orchestrator.py  test_pricing.py  test_real_clients.py  test_router.py  test_run_evals_dryrun.py  test_tracing.py
ui/: package-lock.json  package.json
ui/public/: traces.json  verification.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: ClaimView.tsx  CostHeader.tsx  RunCard.tsx  RunDetail.tsx  SpanNode.tsx  TierBadge.tsx  TokenTimeline.tsx
ui/src/lib/: format.ts
ui/src/types/: traces.ts
