[project]
name = "quorum"
version = "0.1.0"
description = "Task-aware agent orchestrator: cost-aware routing, adversarial verification, traced runs."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "pipelines", "pipelines.code_review", "evals"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["evals/benchmark/bugs/files", "ui"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # long lines tolerated in prompt/docstrings

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
exclude = ["evals/benchmark/", "ui/"]
